# src/api/routes/routes.ts
@@ -64,6 +64,7 @@ const models: TsoaRoute.Models = {
             "conversations": {"dataType":"array","array":{"dataType":"refObject","ref":"ConversationDTO"}},
             "messaages": {"dataType":"array","array":{"dataType":"refObject","ref":"MessageDTO"}},
             "pdpUrl": {"dataType":"string"},
+            "roleId": {"dataType":"string","required":true},
         },
         "additionalProperties": false,
     },
@@ -115,6 +116,7 @@ const models: TsoaRoute.Models = {
             "given_name": {"dataType":"string","required":true},
             "deviceInfo": {"dataType":"string"},
             "picture": {"dataType":"string"},
+            "roleId": {"dataType":"string"},
         },
         "additionalProperties": false,
     },
